--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 </head>
 
 <body id="body" onclick="count()">
-    <button class="hint" id="hint">Hint</button>
+    <img class="hint" id="hint" src="hint.png" alt="Hint" title="Hint">
     <h1 id="pts">No. of Tries :</h1>
 
 <div class="desc">
     <p>On the day before his wedding, Chandler got wedding jitters and ran off somewhere. If Monica knows about this, she would be devastated. So find Chandler before Monica notices.</p>
     <p>Also if you are a real programmer, Chandler is willing to share his location with you!! But it's hidden somewhere, use your supercomputer to find him ASAP!!</p>
+</div>
+
+<div class="rules">
+    <p>The rules are very simple....</p>
+    <p>Click each door and check whether Chandler is hiding behind it<br>
+    If he is there, he will reveal himself and tell your score....<br>
+    If he ain't there try harder.</p>
+    <p>If you feel it is too difficult you can get one hint by clicking the hint button,<br> but as a penalty your try count will increase by one....</p>
 </div>
 
 <div class="boxes">
